//
// Protocol buffers definition for the Configuration Service.
//

syntax = "proto3";
package hmsProto;

message SetConfigRequest {
    string serviceId = 1;
    string serviceConfig = 2;
}

message SetConfigResponse {}

message GetConfigRequest {
    string serviceId = 1;
}

message GetConfigResponse {
    string serviceConfig = 1;
}